# local-llm-interface

./: .gitignore  README.md  pyproject.toml  requirements.txt
local_llm_interface/: app.py  db_creation.py  schema.sql
local_llm_interface/static/js/: chat.js
local_llm_interface/templates/: index.html
tests/: test_ollama.py
