[tool.poetry]
name = "local-llm-interface"
version = "0.1.0"
description = ""
authors = ["Dhruv Sharma <dhruv.sharma@polytechnique.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.1.8"
flask = {extras = ["async"], version = "^3.0.3"}
flask-sqlalchemy = "^3.1.1"
pytest = "^8.1.1"
pytest-flask = "^1.3.0"
requests-mock = "^1.12.1"
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"
flask-session = "^0.8.0"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
